Fix nav link on mobile

--- a/style.css
+++ b/style.css
@@ -290,6 +290,9 @@ ul {
   .nav-item span {
     padding: 0.5em 1em;
   }
+  .nav-item.home span::before {
+    left: 58%;
+  }
   .footer-nav-item {
     padding: 0.5em 1em 1.5em 1em;
   }
